--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "rysz-eriksson-RSSPL2020Q1",
   "version": "1.0.0",
   "description": "Private repository for @rysz-eriksson",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-server": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,22 @@
   },
   "homepage": "https://github.com/rolling-scopes-school/rysz-eriksson-RSSPL2020Q1#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2"
+    "eslint-plugin-import": "^2.20.2",
+    "moment": "^2.26.0",
+    "normalize.css": "^8.0.1",
+    "style-loader": "^1.2.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
