--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "mapbox-gl": "^1.10.1",
     "moment": "^2.26.0",
     "normalize.css": "^8.0.1",
     "style-loader": "^1.2.1"
