--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "style-loader": "^1.2.1"
   },
   "devDependencies": {
+    "file-loader": "^6.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
