--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/rolling-scopes-school/rysz-eriksson-RSSPL2020Q1#readme",
   "dependencies": {
+    "autoprefixer": "^9.8.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -31,6 +32,7 @@
     "mapbox-gl": "^1.10.1",
     "moment": "^2.26.0",
     "normalize.css": "^8.0.1",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1"
   },
   "devDependencies": {
