--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "file-loader": "^6.0.0",
+    "ts-loader": "^8.0.7",
+    "typescript": "^4.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
