--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/rolling-scopes-school/rysz-eriksson-RSSPL2020Q1#readme",
   "dependencies": {
+    "@types/mapbox-gl": "^1.12.5",
     "autoprefixer": "^9.8.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.5",
@@ -29,7 +30,7 @@
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "mapbox-gl": "^1.10.1",
+    "mapbox-gl": "^1.12.0",
     "moment": "^2.26.0",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
