--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev-server": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,14 @@
     "style-loader": "^1.2.1"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.6.0",
     "file-loader": "^6.0.0",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^4.0.2",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "webpack": "^4.43.0",
